# tcc-comparador-textos

./: README.md
tcc/: gerar-tcc.py
tcc/docs/: _validacao_assin2.json  capturar-screenshots.py  etapas-projeto.txt  gerar-diagramas.py  gerar-equacoes.py  tcc-bruno-lorencatto.docx  validar-assin2.py
tcc/src/backend/: README.md  main.py  nlp.py  pyproject.toml  requirements.txt  test_nlp.py
tcc/src/frontend/: index.html  package-lock.json  package.json
tcc/src/frontend/src/: App.tsx
tcc/src/frontend/src/components/: Results.tsx  SharedTerms.tsx  Spinner.tsx  TextInput.tsx
tcc/src/frontend/src/services/: api.ts
tcc/src/frontend/src/types/: api.ts
