[project]
name = "comparador-textos"
version = "1.0.0"
description = "API de comparacao de conteudo textual com TF-IDF e metricas de similaridade"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "nltk==3.9.1",
    "scikit-learn==1.6.1",
]
